[package]
name = "mac-parser"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Frostie314159/mac-parser"
authors = ["Frostie314159"]
description = "A minimal crate for parsing MAC addresses and analysing them."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bin-utils = { version = "0.2.1", default-features = false }

[features]
debug = []
default = ["debug"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "mac_parser"
harness = false
