[package]
name = "mac-parser"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/Frostie314159/mac-parser"
authors = ["Frostie314159"]
description = "A minimal crate for parsing MAC addresses and analysing them."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
scroll = { version = "0.12.0", default-features = false }

[features]
debug = []
default = ["debug"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "mac_parser"
harness = false
