[package]
name = "mac-parser"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/Frostie314159/mac-parser"
authors = ["Frostie314159"]
description = "A minimal crate for parsing MAC addresses and analysing them."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
defmt = { version = "0.3.8", optional = true }
scroll = { version = "0.12.0", default-features = false }
thiserror = "1.0.65"

[features]
debug = []
default = ["debug"]
defmt = ["dep:defmt"]
